--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#company">About</a>
+              <a class="nav-link" href="profil.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#services">Article</a>
@@ -166,47 +166,47 @@
             </div>
             <div class="isi-misi pt-3">
               <div class="row">
-                <div class="col-md-1 col-sm-6 pt-2">
+                <div class="col-md-1 col-lg-1 col-1 pt-2">
                   <i class="bi bi-caret-right"></i>
                 </div>
-                <div class="col-md-9 col-sm-6 p-0">
+                <div class="col-md-9 col-lg-9 col-11 px-4">
                   <p>
                     Memberikan pelayanan terbaik dan manfaat berkelanjutan dalam
                     rangka pemenuhan kebutuhan dan hajat hidup mahasiswa FEB UI.
                   </p>
                 </div>
-                <div class="col-md-2 d-sm-none"></div>
-                <div class="col-md-1 pt-2">
+                <div class="col-md-2 col-lg-2"></div>
+                <div class="col-md-1 col-lg-1 col-1 pt-2">
                   <i class="bi bi-caret-right"></i>
                 </div>
-                <div class="col-md-9 p-0">
+                <div class="col-md-9 col-lg-9 col-11 px-4">
                   <p>
                     Mewadahi dan memfasilitasi pengembangan minat-bakat serta
                     meningkatkan prestasi mahasiswa FEB UI.
                   </p>
                 </div>
-                <div class="col-md-2"></div>
-                <div class="col-md-1 pt-2">
+                <div class="col-md-2 col-lg-2"></div>
+                <div class="col-md-1 col-lg-1 col-1 pt-2">
                   <i class="bi bi-caret-right"></i>
                 </div>
-                <div class="col-md-9 p-0">
+                <div class="col-md-9 col-lg-9 col-11 px-4">
                   <p>
                     Menciptakan, mengembangkan, dan menyebarkan nilai-nilai
                     inklusivitas gerakan pengabdian mahasiswa FEB UI untuk
                     Indonesia.
                   </p>
                 </div>
-                <div class="col-md-2"></div>
-                <div class="col-md-1 pt-2">
+                <div class="col-md-2 col-lg-2"></div>
+                <div class="col-md-1 col-lg-1 col-1 pt-2">
                   <i class="bi bi-caret-right"></i>
                 </div>
-                <div class="col-md-9 p-0">
+                <div class="col-md-9 col-lg-9 col-11 px-4">
                   <p>
                     Menanamkan akar nilai dan budaya BEM FEB UI serta memberikan
                     nilai tambah yang optimal kepada seluruh fungsionaris.
                   </p>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-2 col-lg-2"></div>
               </div>
               <div class="d-flex justify-content-end arrow mgri pt-4">
                 <img src="img/arrow-2.png" alt="" style="opacity: 30%" />
@@ -328,6 +328,11 @@
               </div>
             </div>
           </div>
+          <div class="learn-more pt-5 pb-3 text-center">
+            <a href="#" class="btn btn-primary"
+              >learn more <i class="bi bi-play-circle"></i
+            ></a>
+          </div>
         </div>
       </div>
     </div>
@@ -353,7 +358,7 @@
                 </div>
                 <div class="pembuat-article ps-3 pt-1">
                   <div class="row justify-content-center">
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-4">
                       <div class="nama-pembuat">
                         <a href=""
                           ><i class="bi bi-person" style="color: #42d680"></i
@@ -361,7 +366,7 @@
                         >
                       </div>
                     </div>
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-5">
                       <div class="tanggal-article">
                         <a href="">
                           <i
@@ -372,7 +377,7 @@
                         </a>
                       </div>
                     </div>
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-3">
                       <div class="like-article text-end pe-5">
                         <a href=""
                           ><i
@@ -407,7 +412,7 @@
                 </div>
                 <div class="pembuat-article ps-3 pt-1">
                   <div class="row d-flex justify-content-center">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-4">
                       <div class="nama-pembuat">
                         <a href=""
                           ><i class="bi bi-person" style="color: #42d680"></i
@@ -415,7 +420,7 @@
                         >
                       </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-5">
                       <div class="tanggal-article">
                         <a href="">
                           <i
@@ -426,7 +431,7 @@
                         </a>
                       </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-3">
                       <div class="like-article text-end pe-5">
                         <a href=""
                           ><i
@@ -461,7 +466,7 @@
                 </div>
                 <div class="pembuat-article ps-3 pt-1">
                   <div class="row d-flex justify-content-center">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-4">
                       <div class="nama-pembuat">
                         <a href=""
                           ><i class="bi bi-person" style="color: #42d680"></i
@@ -469,7 +474,7 @@
                         >
                       </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-5">
                       <div class="tanggal-article">
                         <a href="">
                           <i
@@ -480,7 +485,7 @@
                         </a>
                       </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-3">
                       <div class="like-article text-end pe-5">
                         <a href=""
                           ><i
