--- a/profil.html
+++ b/profil.html
@@ -338,7 +338,7 @@
             <div class="col-lg-6 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic01.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -362,7 +362,7 @@
             <div class="col-lg-6 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic02.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -390,7 +390,7 @@
             <div class="col-lg-3 col-md-6 d-flex justify-content-center">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic03.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -414,7 +414,7 @@
             <div class="col-lg-3 col-md-6 d-flex justify-content-center">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic04.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -438,7 +438,7 @@
             <div class="col-lg-3 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic01.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -462,7 +462,7 @@
             <div class="col-lg-3 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic02.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -486,7 +486,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic03.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -510,7 +510,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic04.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -534,7 +534,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic01.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -562,7 +562,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-center">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic02.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -586,7 +586,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-center">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic03.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -610,7 +610,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic04.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -634,7 +634,7 @@
             <div class="col-lg-6 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic01.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -658,7 +658,7 @@
             <div class="col-lg-6 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic02.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -682,7 +682,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic03.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -706,7 +706,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic04.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -730,7 +730,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-center">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic01.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -754,7 +754,7 @@
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic02.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -778,7 +778,7 @@
             <div class="col-lg-6 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic03.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -802,7 +802,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic04.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -826,7 +826,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-around">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic01.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -850,7 +850,7 @@
             <div class="col-lg-4 col-md-6 d-flex justify-content-center">
               <div class="card">
                 <div class="imbBx">
-                  <img src="/img/pic01.jpg" alt="" />
+                  <img src="img/pic02.jpg" alt="" />
                 </div>
 
                 <div class="content">
@@ -884,7 +884,7 @@
           <div class="col-lg-6 d-flex justify-content-center">
             <div class="card mt-5">
               <img
-                src="/img/bupatidanwakilbupati.jpeg"
+                src="img/bupatidanwakilbupati.jpeg"
                 alt="Departemen Keilmuan"
               />
               <div class="learn-more text-center">
@@ -896,7 +896,7 @@
           </div>
           <div class="col-lg-6 d-flex justify-content-center">
             <div class="card mt-5">
-              <img src="/img/sekretaris.jpeg" alt="Departemen Keilmuan" />
+              <img src="img/sekretaris.jpeg" alt="Departemen Keilmuan" />
               <div class="learn-more text-center">
                 <a href="#" class="btn btn-primary"
                   >learn more <i class="bi bi-play-circle"></i
@@ -906,7 +906,7 @@
           </div>
           <div class="col-lg-6 d-flex justify-content-center">
             <div class="card mt-5">
-              <img src="/img/bendahara.jpeg" alt="Departemen Keilmuan" />
+              <img src="img/bendahara.jpeg" alt="Departemen Keilmuan" />
               <div class="learn-more text-center">
                 <a href="#" class="btn btn-primary"
                   >learn more <i class="bi bi-play-circle"></i
@@ -916,7 +916,7 @@
           </div>
           <div class="col-lg-6 d-flex justify-content-center">
             <div class="card mt-5">
-              <img src="/img/kwu.jpeg" alt="Departemen Keilmuan" />
+              <img src="img/kwu.jpeg" alt="Departemen Keilmuan" />
               <div class="learn-more text-center">
                 <a href="#" class="btn btn-primary"
                   >learn more <i class="bi bi-play-circle"></i
@@ -926,7 +926,7 @@
           </div>
           <div class="col-lg-6 d-flex justify-content-center">
             <div class="card mt-5">
-              <img src="/img/psdm.jpeg" alt="Departemen Keilmuan" />
+              <img src="img/psdm.jpeg" alt="Departemen Keilmuan" />
               <div class="learn-more text-center">
                 <a href="#" class="btn btn-primary"
                   >learn more <i class="bi bi-play-circle"></i
@@ -936,7 +936,7 @@
           </div>
           <div class="col-lg-6 d-flex justify-content-center">
             <div class="card mt-5">
-              <img src="/img/kominfo.jpeg" alt="Departemen Keilmuan" />
+              <img src="img/kominfo.jpeg" alt="Departemen Keilmuan" />
               <div class="learn-more text-center">
                 <a href="#" class="btn btn-primary"
                   >learn more <i class="bi bi-play-circle"></i
@@ -946,7 +946,7 @@
           </div>
           <div class="col-lg-6 d-flex justify-content-center">
             <div class="card mt-5">
-              <img src="/img/litbang.jpeg" alt="Departemen Keilmuan" />
+              <img src="img/litbang.jpeg" alt="Departemen Keilmuan" />
               <div class="learn-more text-center">
                 <a href="#" class="btn btn-primary"
                   >learn more <i class="bi bi-play-circle"></i
@@ -956,7 +956,7 @@
           </div>
           <div class="col-lg-6 d-flex justify-content-center">
             <div class="card mt-5">
-              <img src="/img/humas.jpeg" alt="Departemen Keilmuan" />
+              <img src="img/humas.jpeg" alt="Departemen Keilmuan" />
               <div class="learn-more text-center">
                 <a href="#" class="btn btn-primary"
                   >learn more <i class="bi bi-play-circle"></i
