--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item-btn">
-              <a class="btn btn-primary" aria-current="page" href="#home"
+              <a
+                class="btn btn-primary"
+                aria-current="page"
+                href="https://www.instagram.com/hmpsif_uwks/"
                 >Visit Instagram <i class="bi bi-instagram"></i
               ></a>
             </li>
