--- a/profil.html
+++ b/profil.html
@@ -348,7 +348,7 @@
             <h5>Bupati & Wakil Bupati</h5>
           </div>
 
-          <div class="col-lg-6 col-md-6 d-flex justify-content-center">
+          <div class="col-lg-6 col-md-6 col-sm d-flex justify-content-center">
             <div class="card">
               <div class="imbBx">
                 <img src="img/foto_hmps/reza.jpeg" alt="" />
@@ -376,7 +376,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 d-flex justify-content-center">
+          <div class="col-lg-6 col-md-6 col-sm d-flex justify-content-center">
             <div class="card">
               <div class="imbBx">
                 <img src="img/foto_hmps/ryan.jpeg" alt="" />
